--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 *.class
 *.log
+*.res
 
 # sbt specific
 dist/*
@@ -12,6 +13,9 @@ project/plugins/project/
 # Scala-IDE specific
 .scala_dependencies
 
+# Idea
+*.iml
+
 # mine
 results/
 .DS_STORE
@@ -21,3 +25,4 @@ results/
 .project
 .worksheet
 .classpath
+
