--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,6 +4,8 @@
   "biIterNo" : 1000
   "svIterNo" : 200
   "mcRuns" : 10000
+  "SPINouterMC" : 1000
+  "SPINinnerMC" : 4000
 }
 "experiments" : {
   "resultsDirectory" : "experimentalResults"
@@ -16,7 +18,7 @@
                 ]
     }
     "weighted" : {
-      "gml" : ["../graphs/gml/lesmiserables[W].gml"]
+       "gml" : ["../graphs/gml/lesmiserables[W].gml"]
     }
   }
   "bigCases" : {
