time measurement fix

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -8,13 +8,13 @@
   "SPINinnerMC" : 4000
 }
 "experiments" : {
-  "resultsDirectory" : "experimentalResults"
+  "resultsDirectory" : "results"
   "smallCases" : {
     "unweighted" : {
        "gml" : [
-                "../graphs/gml/football.gml",
-                "../graphs/gml/dolphins.gml",
-                "../graphs/gml/polbooks.gml"
+                 "../graphs/gml/football.gml",
+                 "../graphs/gml/dolphins.gml",
+                 "../graphs/gml/polbooks.gml"
                 ]
     }
     "weighted" : {
