--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -34,7 +34,7 @@
       "gml": ["../graphs/gml/hep-th[W].gml"]
     }
   }
-  "includeBigCases" : "false"
-  "includeSmallCases": "true"
-  "maxGraphSize" : 2000
+  "includeBigCases" : "true"
+  "includeSmallCases": "false"
+  "maxGraphSize" : 5000
 }
