--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,3 +1,4 @@
+"threadPoolSize" : 4
 "graph" : {
   "weightDenominator" : 10000
   "ldagThreshold" : 0.003125
@@ -23,12 +24,12 @@
   }
   "bigCases" : {
     "unweighted" : {
-      "txt" : ["../graphs/txt/amazon0302.txt",
-               "../graphs/txt/p2p-Gnutella04.txt",
-               "../graphs/txt/web-Stanford.txt",
-               "../graphs/txt/wiki-Vote.txt",
-               "../graphs/txt/email-Enron.txt",
-               "../graphs/txt/oregon1_010331.txt"]
+      "txt" : ["../graphs/txt/amazon0302.txt"]
+              // "../graphs/txt/p2p-Gnutella04.txt",
+              // "../graphs/txt/web-Stanford.txt",
+              // "../graphs/txt/wiki-Vote.txt",
+              // "../graphs/txt/email-Enron.txt",
+              // "../graphs/txt/oregon1_010331.txt"]
     }
     "weighted" : {
       "gml": ["../graphs/gml/hep-th[W].gml"]
